# ScribeTool

./: Makefile.am  README.md  common.mk  configure.ac
src/: Makefile.am  scribe.thrift
src/basetool/: AceTaskWrap.hpp  CommServerSignalHandler.hpp  Configuration.cpp  Configuration.hpp  SafeSharedPtr.hpp  debug.cpp  debug.h
src/scribe/: ScribeClient.hpp  ScribeHandler.cpp  ScribeHandler.hpp  ScribeServer.hpp  common.h  env_default.h  sample_main.cpp
src/xml/: SXml.cpp  SXml.h  test.cpp
